--- a/lw-1/Valuator/Valuator.csproj
+++ b/lw-1/Valuator/Valuator.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
+  </ItemGroup>
+
 </Project>
