--- a/lw-1/Valuator/appsettings.json
+++ b/lw-1/Valuator/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "my-redis": "localhost:6379"
+  }
 }
